--- a/Aim2/code/Python/04afd-modis-viirs_archive.ipynb
+++ b/Aim2/code/Python/04afd-modis-viirs_archive.ipynb
@@ -198,6 +198,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>id</th>\n",
+       "      <th>ig_year</th>\n",
        "      <th>ig_date</th>\n",
        "      <th>last_date</th>\n",
        "      <th>geometry</th>\n",
@@ -207,6 +208,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>282</td>\n",
+       "      <td>2021</td>\n",
        "      <td>2021-08-05</td>\n",
        "      <td>2021-08-05</td>\n",
        "      <td>POLYGON ((-2086715.084 2356782.795, -2087666.8...</td>\n",
@@ -214,6 +216,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>492</td>\n",
+       "      <td>2018</td>\n",
        "      <td>2018-08-09</td>\n",
        "      <td>2018-08-13</td>\n",
        "      <td>POLYGON ((-2099220.550 2280974.827, -2105343.3...</td>\n",
@@ -221,6 +224,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1796</td>\n",
+       "      <td>2021</td>\n",
        "      <td>2021-10-28</td>\n",
        "      <td>2021-11-04</td>\n",
        "      <td>POLYGON ((-1796487.029 1997450.102, -1799267.9...</td>\n",
@@ -228,6 +232,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2207</td>\n",
+       "      <td>2021</td>\n",
        "      <td>2021-10-30</td>\n",
        "      <td>2021-10-30</td>\n",
        "      <td>POLYGON ((-1822312.155 1967211.915, -1823260.8...</td>\n",
@@ -235,6 +240,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2314</td>\n",
+       "      <td>2021</td>\n",
        "      <td>2021-10-29</td>\n",
        "      <td>2021-10-29</td>\n",
        "      <td>POLYGON ((-1758198.372 1945155.099, -1759124.2...</td>\n",
@@ -244,12 +250,12 @@
        "</div>"
       ],
       "text/plain": [
-       "     id    ig_date  last_date  \\\n",
-       "0   282 2021-08-05 2021-08-05   \n",
-       "1   492 2018-08-09 2018-08-13   \n",
-       "2  1796 2021-10-28 2021-11-04   \n",
-       "3  2207 2021-10-30 2021-10-30   \n",
-       "4  2314 2021-10-29 2021-10-29   \n",
+       "     id  ig_year    ig_date  last_date  \\\n",
+       "0   282     2021 2021-08-05 2021-08-05   \n",
+       "1   492     2018 2018-08-09 2018-08-13   \n",
+       "2  1796     2021 2021-10-28 2021-11-04   \n",
+       "3  2207     2021 2021-10-30 2021-10-30   \n",
+       "4  2314     2021 2021-10-29 2021-10-29   \n",
        "\n",
        "                                            geometry  \n",
        "0  POLYGON ((-2086715.084 2356782.795, -2087666.8...  \n",
@@ -267,7 +273,7 @@
    "source": [
     "bounds = create_bounds(aspen_events, by_bounds=True, buffer=1000)\n",
     "bounds = bounds.set_crs(proj, allow_override=True) # ensure correct crs\n",
-    "bounds = bounds[['id','ig_date','last_date','geometry']] \n",
+    "bounds = bounds[['id','ig_year','ig_date','last_date','geometry']] \n",
     "bounds.head()"
    ]
   },
@@ -793,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "14921074-c6fc-42c5-87ff-29b5339cb29e",
    "metadata": {},
    "outputs": [
@@ -802,12 +808,12 @@
       "text/plain": [
        "Index(['LATITUDE', 'LONGITUDE', 'BRIGHTNESS', 'SCAN', 'TRACK', 'ACQ_DATE',\n",
        "       'ACQ_TIME', 'SATELLITE', 'INSTRUMENT', 'CONFIDENCE', 'VERSION',\n",
-       "       'BRIGHT_T31', 'FRP', 'DAYNIGHT', 'TYPE', 'geometry', 'id', 'ig_date',\n",
-       "       'last_date', 'ACQ_MONTH', 'ACQ_YEAR', 'ACQ_DATETIME'],\n",
+       "       'BRIGHT_T31', 'FRP', 'DAYNIGHT', 'TYPE', 'geometry', 'id', 'ig_year',\n",
+       "       'ig_date', 'last_date', 'ACQ_MONTH', 'ACQ_YEAR', 'ACQ_DATETIME'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -885,19 +891,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "0f0677e2-bd14-4f1a-8a83-1aa88f4c68e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['LATITUDE', 'LONGITUDE', 'BRIGHTNESS', 'SCAN', 'TRACK', 'ACQ_DATE',\n",
+       "       'ACQ_TIME', 'SATELLITE', 'INSTRUMENT', 'CONFIDENCE', 'VERSION',\n",
+       "       'BRIGHT_T31', 'FRP', 'DAYNIGHT', 'TYPE', 'geometry', 'id', 'ig_year',\n",
+       "       'ig_date', 'last_date', 'ACQ_MONTH', 'ACQ_YEAR', 'ACQ_DATETIME'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "afd_events_plots['MOD61'].columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c22ce608-72f3-4e1f-aeb8-09b8d3863bea",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "1c5c41f5-d9d6-4ddc-b1f6-9cde4b9e4ba0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Gather bounds for individual fires/AFDs"
+   ]
   },
   {
    "cell_type": "code",
@@ -909,7 +942,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
+   "id": "25df97c5-ba2d-4f08-a03f-b569b97f3482",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating bounds for MOD61 observations.\n",
+      "Saved to /Users/max/Library/CloudStorage/OneDrive-Personal/mcook/aspen-fire/Aim2/data/spatial/mod/AFD/MOD61-afd_fired-aspen_2018_to_2023_bounds.gpkg\n",
+      "\n",
+      "Creating bounds for SNPP observations.\n",
+      "Saved to /Users/max/Library/CloudStorage/OneDrive-Personal/mcook/aspen-fire/Aim2/data/spatial/mod/AFD/SNPP-afd_fired-aspen_2018_to_2023_bounds.gpkg\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "buffer = 1000 # meters\n",
+    "afd_fire_bounds = {}\n",
+    "for satellite, afd in afd_events_plots.items():\n",
+    "    print(f\"Creating bounds for {satellite} observations.\")\n",
+    "    \n",
+    "    # Group by fire ID\n",
+    "    grouped = afd.groupby('id')\n",
+    "    bounds_gdf = gpd.GeoDataFrame(columns=['id', 'ig_year', 'geometry'], crs=afd.crs)\n",
+    "    # Iterate over each fire group\n",
+    "    for fire_id, group in grouped:\n",
+    "        # Calculate the total bounds (minx, miny, maxx, maxy) for all geometries in the group\n",
+    "        bounds = box(*group.total_bounds)\n",
+    "        # Apply buffer if specified\n",
+    "        if buffer is not None:\n",
+    "            bounds = bounds.buffer(buffer)\n",
+    "        # Extract the ig_year (assuming it's the same for all AFD in the group)\n",
+    "        ig_year = group['ig_year'].iloc[0]\n",
+    "        # Create a GeoDataFrame for this fire with the bounding box, id, and ig_year\n",
+    "        fire_gdf = gpd.GeoDataFrame({'id': [fire_id], 'ig_year': [ig_year], 'geometry': [bounds]}, crs=afd.crs)\n",
+    "        # Append the result to the GeoDataFrame\n",
+    "        bounds_gdf = pd.concat([bounds_gdf, fire_gdf], ignore_index=True)\n",
+    "\n",
+    "    # Store the result\n",
+    "    afd_fire_bounds[satellite] = bounds_gdf\n",
+    "\n",
+    "    # Save out the bounds to a file\n",
+    "    out_fp = os.path.join(projdir, f'data/spatial/mod/AFD/{satellite}-afd_fired-aspen_2018_to_2023_bounds.gpkg')\n",
+    "    bounds_gdf.to_file(out_fp)\n",
+    "    print(f\"Saved to {out_fp}\\n\")\n",
+    "\n",
+    "    gc.collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "b2d0aee8-e6e4-490e-a305-f86332d44176",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "31\n"
+     ]
+    }
+   ],
+   "source": [
+    "temp = afd_events_plots['MOD61']\n",
+    "temp_ = temp[temp['ig_year'] == 2023]\n",
+    "print(len(temp_['id'].unique()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "e124db6e-c51a-46c2-8783-879bac319421",
    "metadata": {},
    "outputs": [
@@ -919,7 +1025,7 @@
        "0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
