--- a/Aim2/code/Python/00nifc-fire-perimeters.ipynb
+++ b/Aim2/code/Python/00nifc-fire-perimeters.ipynb
@@ -1356,6 +1356,34 @@
    "source": [
     "gc.collect()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2b5e0ec-93a0-4fec-b601-d8072e85db8d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9da2c526-5a86-4738-a39a-d83086e4328c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Attempt to join to ICS-209-PLUS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "046f12f0-f84c-4c2e-926d-afd29e1339cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fp = os.path.join("
+   ]
   }
  ],
  "metadata": {
