--- a/Aim2/code/Python/02afd-modis-viirs_archive-nifc.ipynb
+++ b/Aim2/code/Python/02afd-modis-viirs_archive-nifc.ipynb
@@ -16,25 +16,23 @@
    ],
    "source": [
     "\"\"\"\n",
-    "Link daily Fire Radiative Power (FRP) retrievals to daily fire perimeters\n",
+    "Extract Active Fire Detections (AFDs) from MODIS and VIIRS within \"aspen fires\"\n",
+    "\n",
     "Author: maxwell.cook@colorado.edu\n",
     "\"\"\"\n",
     "\n",
-    "import os, time, glob, gc\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
+    "import os, time, glob, sys\n",
     "import geopandas as gpd\n",
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import pytz\n",
-    "\n",
-    "from datetime import datetime\n",
-    "from shapely.geometry import box\n",
-    "from shapely.geometry import Polygon, MultiPolygon\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\") # suppresses annoying geopandas warning\n",
+    "\n",
+    "# Custom functions\n",
+    "sys.path.append(os.path.join(os.getcwd(),'code/'))\n",
+    "from __functions import *\n",
     "\n",
     "proj = 'EPSG:5070'\n",
     "\n",
@@ -42,61 +40,6 @@
     "projdir = os.path.join(maindir, 'aspen-fire/Aim2/')\n",
     "\n",
     "print(\"Ready to go !\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "3c69eb3b-f9d3-4724-a705-22c112920d6b",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Functions read !\n"
-     ]
-    }
-   ],
-   "source": [
-    "def create_bounds(gdf, buffer=None, by_bounds=True):\n",
-    "    \"\"\" Calculate a bounding rectangle for a given geometry and buffer \"\"\"\n",
-    "    if by_bounds is True:\n",
-    "        geom = gdf.geometry.apply(lambda geo: box(*geo.bounds))\n",
-    "        if buffer is not None:\n",
-    "            geom = geom.buffer(buffer)\n",
-    "        # Apply the new geometry\n",
-    "        gdf_ = gdf.copy()\n",
-    "        gdf_.geometry = geom.geometry.apply(\n",
-    "            lambda geo: Polygon(geo) if geo.geom_type == 'Polygon' else MultiPolygon([geo]))\n",
-    "        return gdf_\n",
-    "    elif by_bounds is False:\n",
-    "        if buffer is not None:\n",
-    "            geom = gdf.geometry.buffer(buffer)\n",
-    "        else:\n",
-    "            gdf_ = gdf.copy()\n",
-    "            gdf_.geometry = gdf_.geometry.buffer(buffer)\n",
-    "            return gdf_    \n",
-    "\n",
-    " \n",
-    "def convert_datetime(acq_date, acq_time):\n",
-    "    \"\"\" Function to convert ACQ_DATE and ACQ_TIME to a datetime object in UTC \"\"\"\n",
-    "    # Ensure ACQ_TIME is in HHMM format\n",
-    "    acq_time = str(acq_time) # force to string\n",
-    "    if len(acq_time) == 3:\n",
-    "        acq_time = '0' + acq_time\n",
-    "    elif len(acq_time) == 2:\n",
-    "        acq_time = '00' + acq_time\n",
-    "    elif len(acq_time) == 1:\n",
-    "        acq_time = '000' + acq_time\n",
-    "\n",
-    "    acq_date_str = acq_date.strftime('%Y-%m-%d')\n",
-    "    dt = datetime.strptime(acq_date_str + acq_time, '%Y-%m-%d%H%M')\n",
-    "    dt_utc = pytz.utc.localize(dt)  # Localize the datetime object to UTC\n",
-    "    return dt_utc\n",
-    "\n",
-    "\n",
-    "print(\"Functions ready !\")"
    ]
   },
   {
@@ -109,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "92f3265a-348b-4093-a1b5-ef0bc30f989d",
    "metadata": {},
    "outputs": [],
@@ -127,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "444d750f-ac02-471b-a570-8f26385cf39c",
    "metadata": {},
    "outputs": [
@@ -139,7 +82,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,39 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "d2bee532-a7c1-4c15-aad6-764c7dd6da7f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['Wildfire Final Fire Perimeter', 'Wildfire',\n",
-       "       'Wildfire Daily Fire Perimeter'], dtype=object)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "aspen_events['FEATURE_CA'].unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "2cc9fd02-0c88-4c58-af56-1f1d05a3098a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create a fire perimeter buffer to extract FRP observations within 1km of bounds."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "258aba23-d897-44c6-828b-a657e3e323ce",
    "metadata": {},
    "outputs": [
@@ -246,10 +157,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>21</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>SPRUCE</td>\n",
-       "      <td>POLYGON ((-959055.201 1632379.845, -959491.366...</td>\n",
+       "      <td>23</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>LOADING PEN</td>\n",
+       "      <td>POLYGON ((-1071014.573 1681756.433, -1071765.1...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -261,22 +172,23 @@
        "1         8       2019           577   \n",
        "2        12       2018  SERVICEBERRY   \n",
        "3        14       2018           416   \n",
-       "4        21       2018        SPRUCE   \n",
+       "4        23       2020   LOADING PEN   \n",
        "\n",
        "                                            geometry  \n",
        "0  POLYGON ((-981360.461 1644805.834, -981864.344...  \n",
        "1  POLYGON ((-1003641.705 1627304.106, -1004580.3...  \n",
        "2  POLYGON ((-955842.719 1623123.110, -956568.269...  \n",
        "3  POLYGON ((-1031771.042 1658048.676, -1047969.7...  \n",
-       "4  POLYGON ((-959055.201 1632379.845, -959491.366...  "
+       "4  POLYGON ((-1071014.573 1681756.433, -1071765.1...  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Create a fire perimeter buffer to extract FRP observations within 1km of bounds.\n",
     "bounds = create_bounds(aspen_events, by_bounds=True, buffer=1000)\n",
     "bounds = bounds.set_crs(proj, allow_override=True) # ensure correct crs\n",
     "bounds = bounds[['OBJECTID','FIRE_YEAR','INCIDENT','geometry']] \n",
@@ -286,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "9572203e-1079-421d-845e-94e3ff7fe2d4",
    "metadata": {},
    "outputs": [
@@ -309,7 +221,7 @@
        "- Prime Meridian: Greenwich"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +232,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "id": "6c1b8d8d-9a4b-4f9a-9d65-310a5fd5615e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3665ea14-4e11-4d09-980c-3ad2b125f2ed",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "9280561c-b025-4e3e-98fe-115f78f37ac7",
    "metadata": {},
    "outputs": [],
@@ -338,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "3eae4f3f-685b-4a9c-9557-b9ba89b94bd7",
    "metadata": {},
    "outputs": [
@@ -359,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "ab8eb693-f076-457b-bd7d-4ee7aac2c66a",
    "metadata": {},
    "outputs": [
@@ -525,7 +453,7 @@
        "4   POINT (-677212.174 2392519.636)  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "126f1a3f-ed29-4066-9e8e-6ddb84ba2a8f",
    "metadata": {},
    "outputs": [
@@ -706,7 +634,7 @@
        "4  POINT (-2264952.497 2075236.763)  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -726,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "7003f152-6e2c-461d-b616-15a023ff3fc4",
    "metadata": {},
    "outputs": [
@@ -749,7 +677,7 @@
        "- Prime Meridian: Greenwich"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -760,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "d39b3c37-8fea-4d0b-af2c-831787c50134",
    "metadata": {},
    "outputs": [],
@@ -768,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "57af249d-0e08-408e-93f3-41274070218c",
    "metadata": {},
    "outputs": [],
@@ -786,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "143cf807-00ce-48fd-8ba0-7ab2adde47c7",
    "metadata": {},
    "outputs": [
@@ -795,11 +723,13 @@
      "output_type": "stream",
      "text": [
       "Processing: MOD61\n",
-      "\tThere are [30858] high or nominal confidence detections within fire bounds.\n",
+      "Be aware ! Duplicates found ! 1405 to be exact ...\n",
+      "\tThere are [30214] high or nominal confidence detections within fire bounds.\n",
       "Saved to /Users/max/Library/CloudStorage/OneDrive-Personal/mcook/aspen-fire/Aim2/data/spatial/mod/AFD/MOD61-afd_fired-aspen_2018_to_2023.gpkg\n",
       "\n",
       "Processing: SNPP\n",
-      "\tThere are [128245] high or nominal confidence detections within fire bounds.\n",
+      "Be aware ! Duplicates found ! 4955 to be exact ...\n",
+      "\tThere are [125503] high or nominal confidence detections within fire bounds.\n",
       "Saved to /Users/max/Library/CloudStorage/OneDrive-Personal/mcook/aspen-fire/Aim2/data/spatial/mod/AFD/SNPP-afd_fired-aspen_2018_to_2023.gpkg\n",
       "\n",
       "\n",
@@ -839,9 +769,11 @@
     "    # Filter for matching fire year\n",
     "    afd_f = afd_[afd_['ACQ_YEAR'] == afd_['FIRE_YEAR']]\n",
     "\n",
-    "    # # Drop any duplicates\n",
-    "    # afd_f = afd_f.drop_duplicates(subset='VID', keep='first')\n",
-    "    # afd_f.drop(columns=['VID'], inplace=True)\n",
+    "    # Drop any duplicates\n",
+    "    dups = afd_f.duplicated(subset='VID').sum()\n",
+    "    if dups > 0:\n",
+    "        print(f\"Be aware ! Duplicates found ! {dups} to be exact ...\")\n",
+    "        # afd_f = afd_f.drop_duplicates(subset='VID', keep='first')\n",
     "    \n",
     "    print(f\"\\tThere are [{len(afd_f)}] high or nominal confidence detections within fire bounds.\")\n",
     "\n",
@@ -861,25 +793,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
+   "id": "668c4c18-90d2-47dd-b79f-4d92259f83a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Handle duplicates seperately"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "14921074-c6fc-42c5-87ff-29b5339cb29e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['LATITUDE', 'LONGITUDE', 'BRIGHTNESS', 'SCAN', 'TRACK', 'ACQ_DATE',\n",
-       "       'ACQ_TIME', 'SATELLITE', 'INSTRUMENT', 'CONFIDENCE', 'VERSION',\n",
-       "       'BRIGHT_T31', 'FRP', 'DAYNIGHT', 'TYPE', 'geometry', 'VID', 'OBJECTID',\n",
-       "       'FIRE_YEAR', 'INCIDENT', 'ACQ_MONTH', 'ACQ_YEAR', 'ACQ_DATETIME'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "afd_events['MOD61'].columns"
    ]
@@ -894,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "e8c0d755-6bcd-4dde-bf26-9cbf2eb5c450",
    "metadata": {},
    "outputs": [],
@@ -912,23 +839,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "e31b646c-d3ff-48e8-9c04-52750cdca3ed",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creating buffer for MOD61 observations.\n",
-      "Saved to /Users/max/Library/CloudStorage/OneDrive-Personal/mcook/aspen-fire/Aim2/data/spatial/mod/AFD/MOD61-afd_fired-aspen_2018_to_2023_buffer.gpkg\n",
-      "\n",
-      "Creating buffer for SNPP observations.\n",
-      "Saved to /Users/max/Library/CloudStorage/OneDrive-Personal/mcook/aspen-fire/Aim2/data/spatial/mod/AFD/SNPP-afd_fired-aspen_2018_to_2023_buffer.gpkg\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "afd_events_plots = {} # to store the buffered observations\n",
     "for satellite, afd in afd_events.items():\n",
@@ -953,25 +867,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "0f0677e2-bd14-4f1a-8a83-1aa88f4c68e5",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['LATITUDE', 'LONGITUDE', 'BRIGHTNESS', 'SCAN', 'TRACK', 'ACQ_DATE',\n",
-       "       'ACQ_TIME', 'SATELLITE', 'INSTRUMENT', 'CONFIDENCE', 'VERSION',\n",
-       "       'BRIGHT_T31', 'FRP', 'DAYNIGHT', 'TYPE', 'geometry', 'VID', 'OBJECTID',\n",
-       "       'FIRE_YEAR', 'INCIDENT', 'ACQ_MONTH', 'ACQ_YEAR', 'ACQ_DATETIME'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "afd_events_plots['MOD61'].columns"
    ]
@@ -986,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "1c5c41f5-d9d6-4ddc-b1f6-9cde4b9e4ba0",
    "metadata": {},
    "outputs": [],
@@ -1004,23 +903,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "25df97c5-ba2d-4f08-a03f-b569b97f3482",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creating bounds for MOD61 observations.\n",
-      "Saved to /Users/max/Library/CloudStorage/OneDrive-Personal/mcook/aspen-fire/Aim2/data/spatial/mod/AFD/MOD61-afd_fired-aspen_2018_to_2023_bounds.gpkg\n",
-      "\n",
-      "Creating bounds for SNPP observations.\n",
-      "Saved to /Users/max/Library/CloudStorage/OneDrive-Personal/mcook/aspen-fire/Aim2/data/spatial/mod/AFD/SNPP-afd_fired-aspen_2018_to_2023_bounds.gpkg\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "buffer = 1000 # meters\n",
     "afd_fire_bounds = {}\n",
@@ -1057,19 +943,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "c4499c1a-5945-4522-889b-5c542a09f92a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saved to /Users/max/Library/CloudStorage/OneDrive-Personal/mcook/aspen-fire/Aim2/data/spatial/mod/AFD/all-afd_fired-aspen_2018_to_2023_bounds.gpkg\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Combine the MODIS and VIIRS bounds into a single GeoDataFrame\n",
     "combined = pd.concat([afd_fire_bounds['MOD61'], afd_fire_bounds['SNPP']], ignore_index=True)\n",
@@ -1102,21 +979,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "e124db6e-c51a-46c2-8783-879bac319421",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "gc.collect()"
    ]
