Adding 03afd-severity_CBI.ipynb

--- a/Aim2/code/Python/01nifc-fire-ics_geolocate.ipynb
+++ b/Aim2/code/Python/01nifc-fire-ics_geolocate.ipynb
@@ -1270,7 +1270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "27393b84-2a89-4811-9ef4-ec5aef512b83",
    "metadata": {},
    "outputs": [
@@ -1284,7 +1284,7 @@
    ],
    "source": [
     "out_fp = os.path.join(projdir,'data/spatial/mod/NIFC/nifc-ics_2018_to_2023-aspen.gpkg')\n",
-    "aspen_events_.to_file(out_fp)\n",
+    "aspen_events_ics.to_file(out_fp)\n",
     "print(f\"Saved file to: {out_fp}\")"
    ]
   }
