Updates to 03afd-severity_CBI.ipynb;

--- a/Aim2/code/Python/02afd-modis-viirs_archive-nifc.ipynb
+++ b/Aim2/code/Python/02afd-modis-viirs_archive-nifc.ipynb
@@ -926,34 +926,153 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 42,
    "id": "0f0677e2-bd14-4f1a-8a83-1aa88f4c68e5",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['LATITUDE', 'LONGITUDE', 'BRIGHTNESS', 'SCAN', 'TRACK', 'ACQ_DATE',\n",
+      "       'ACQ_TIME', 'SATELLITE', 'INSTRUMENT', 'CONFIDENCE', 'VERSION',\n",
+      "       'BRIGHT_T31', 'FRP', 'DAYNIGHT', 'TYPE', 'geometry', 'VID', 'NIFC_ID',\n",
+      "       'NIFC_NAME', 'START_YEAR', 'DISCOVERY_DATE', 'WF_CESSATION_DATE',\n",
+      "       'na_l3name', 'ACQ_MONTH', 'ACQ_YEAR', 'ACQ_DATETIME'],\n",
+      "      dtype='object')\n",
+      "\n",
+      "~~~~~~~~~\n",
+      "\n",
+      "Index(['LATITUDE', 'LONGITUDE', 'BRIGHTNESS', 'SCAN', 'TRACK', 'ACQ_DATE',\n",
+      "       'ACQ_TIME', 'SATELLITE', 'INSTRUMENT', 'CONFIDENCE', 'VERSION',\n",
+      "       'BRIGHT_T31', 'FRP', 'DAYNIGHT', 'TYPE', 'geometry', 'VID', 'NIFC_ID',\n",
+      "       'NIFC_NAME', 'START_YEAR', 'DISCOVERY_DATE', 'WF_CESSATION_DATE',\n",
+      "       'na_l3name', 'ACQ_MONTH', 'ACQ_YEAR', 'ACQ_DATETIME'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(afd_events_plots['MOD61'].columns)\n",
+    "print(\"\\n~~~~~~~~~\\n\")\n",
+    "print(afd_events_plots['SNPP'].columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "8c2e7c86-6667-4cbb-9445-36db3ecce78e",
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>NIFC_ID</th>\n",
+       "      <th>NIFC_NAME</th>\n",
+       "      <th>afdID</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>9582</td>\n",
+       "      <td>SAULS</td>\n",
+       "      <td>MODIS7298</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>9582</td>\n",
+       "      <td>SAULS</td>\n",
+       "      <td>MODIS7301</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>69318</td>\n",
+       "      <td>PINE RIDGE</td>\n",
+       "      <td>MODIS7989</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>69318</td>\n",
+       "      <td>PINE RIDGE</td>\n",
+       "      <td>MODIS7990</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>69318</td>\n",
+       "      <td>PINE RIDGE</td>\n",
+       "      <td>MODIS7991</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Index(['LATITUDE', 'LONGITUDE', 'BRIGHTNESS', 'SCAN', 'TRACK', 'ACQ_DATE',\n",
-       "       'ACQ_TIME', 'SATELLITE', 'INSTRUMENT', 'CONFIDENCE', 'VERSION',\n",
-       "       'BRIGHT_T31', 'FRP', 'DAYNIGHT', 'TYPE', 'geometry', 'VID', 'NIFC_ID',\n",
-       "       'NIFC_NAME', 'START_YEAR', 'DISCOVERY_DATE', 'WF_CESSATION_DATE',\n",
-       "       'na_l3name', 'ACQ_MONTH', 'ACQ_YEAR', 'ACQ_DATETIME'],\n",
-       "      dtype='object')"
+       "  NIFC_ID   NIFC_NAME      afdID\n",
+       "0    9582       SAULS  MODIS7298\n",
+       "1    9582       SAULS  MODIS7301\n",
+       "2   69318  PINE RIDGE  MODIS7989\n",
+       "3   69318  PINE RIDGE  MODIS7990\n",
+       "4   69318  PINE RIDGE  MODIS7991"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "afd_events_plots['MOD61'].columns"
+    "# Combine the MODIS and VIIRS buffers into a single GeoDataFrame\n",
+    "afd_events_plots_c = pd.concat([afd_events_plots['MOD61'], afd_events_plots['SNPP']], ignore_index=True)\n",
+    "# Create a new identifier\n",
+    "afd_events_plots_c['afdID'] = afd_events_plots_c['INSTRUMENT'].astype(str) + afd_events_plots_c['VID'].astype(str)\n",
+    "afd_events_plots_c[['NIFC_ID','NIFC_NAME','afdID']].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "c22ce608-72f3-4e1f-aeb8-09b8d3863bea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved to /Users/max/Library/CloudStorage/OneDrive-Personal/mcook/aspen-fire/Aim2/data/spatial/mod/AFD/combined-afd_aspen-fires_2018_to_2023_buffer.gpkg\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Export to file.\n",
+    "out_fp = os.path.join(projdir,f'data/spatial/mod/AFD/combined-afd_aspen-fires_2018_to_2023_buffer.gpkg')\n",
+    "afd_events_plots_c.to_file(out_fp)\n",
+    "print(f'Saved to {out_fp}\\n')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c22ce608-72f3-4e1f-aeb8-09b8d3863bea",
+   "id": "2431be7f-8592-4ce7-966d-4ef04d80dcc4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1206,7 +1325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 39,
    "id": "c36f20a2-edf6-42cb-8fc5-32dbf2c091a8",
    "metadata": {},
    "outputs": [
@@ -1222,7 +1341,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1234,6 +1353,27 @@
     "fire_state = fire_state[['NIFC_ID','STUSPS']]\n",
     "combined_ = pd.merge(combined, fire_state, on='NIFC_ID', how='left')\n",
     "combined_.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "8127bf0a-3ce3-4c9f-a4a0-5d21004113a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "63"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(combined_[combined_['na_l3name'] == 'Southern Rockies'])"
    ]
   },
   {
